<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">-</string>
    <string name="quantity_text">0</string>
    <string name="increment">+</string>
    <string name="order">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Whipped Cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Price: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="thank_you" translatable="false">Thank You!</string>
</resources>
