<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee_background_320_570"
    tools:context="com.example.android.justjava.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp" >

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:layout_marginLeft="8dp"
                android:hint="@string/name"
                android:inputType="textCapWords" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/toppings"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />


            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:paddingLeft="24dp"
                android:text="@string/whipped_cream"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/colorPrimary"
                    android:onClick="decrement"
                    android:text="@string/decrement" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/quantity_text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/colorPrimary"
                    android:onClick="increment"
                    android:text="@string/increment" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/order_summary"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/quantity_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textAllCaps="true" />

        </LinearLayout>
</ScrollView>


